feat: <users> append account to user from bank_system
